fix select alignment

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -50,6 +50,10 @@ label > * {
   margin-right: 8px;
 }
 
+label > select {
+  margin-top: -8px;
+}
+
 #page-preferences {
   display: grid;
   grid-gap: 16px;
